[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tiles/bat.png" type="Texture" id=1]
[ext_resource path="res://characters/Bat.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/damage_enemy.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.619355, 1 )
colors = PoolColorArray( 0.752941, 0, 0, 1, 0.752941, 0, 0, 1, 0.752941, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 10 )

[node name="Bat" type="KinematicBody2D"]
z_index = 5
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.752941, 0, 0, 1 )
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="NavigationOffset" type="Node2D" parent="."]
position = Vector2( 8, 8 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="NavigationOffset"]

[node name="NavigationTimer" type="Timer" parent="NavigationOffset/NavigationAgent2D"]
wait_time = 0.2
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 8, 8 )
polygon = PoolVector2Array( 0, -4, -4, 0, 0, 4, 4, 0 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 8, 8 )
z_index = -1
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 9 )

[node name="AudioDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0
max_distance = 500.0

[connection signal="velocity_computed" from="NavigationOffset/NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="timeout" from="NavigationOffset/NavigationAgent2D/NavigationTimer" to="." method="_on_Navigation_Timer_timeout"]
